@@ -66,7 +66,8 @@ module Druid
 
     def is_enabled?(key)
       return true if (self.send "#{key}_element").tag_name == "textarea"
-      self.send("#{key}_element").enabled?
+      element = self.send("#{key}_element")
+      element.enabled? and element.visible?
     end
   end
 end
