@@ -1,6 +1,7 @@
 === 2017-01-18
 * Enhancements
   * Added ability to find elements using any valid attribute
+  * Updated populate_page_with to also check if the element is visible prior to setting value
 === 2017-01-17
 * Enhancements
   * Added :using_params parameter to both on_page and if_page methods
